Test push for Direweasel :D War Minister Blomberg
Write Git in discord if you read this Dire

--- a/bicemodded/localisation/english/traits_l_english.yml
+++ b/bicemodded/localisation/english/traits_l_english.yml
@@ -110,6 +110,7 @@
  GERclose_air_support_proponent:0 "Close Air Support Proponent"
  GERminister_of_armament_and_war_production:0 "Minister for War Production"
  GERruthless_pragmatist:0 "Ruthless Pragmatist"
+ GER_war_minister:0 "War Minister"
  GERengineer:0 "Industrial Engineer"
  GERmobile_warfare:0 "Infantry Tank Support Tactics"
  GER_army_commando:1 "Commando\n(Expert)"
