fixes to german tank and air tree mostly to look them nice almost done need to solve some last problems

--- a/bicemodded/localisation/english/equipment_l_english.yml
+++ b/bicemodded/localisation/english/equipment_l_english.yml
@@ -5236,6 +5236,10 @@
  czech_panzer_equipment_3_short:0 "Panzer 38 F (t) Lt.TK"
  czech_panzer_equipment_3_desc:0 "Pz 38(t) with frontal armour increased to 50 mm by bolting on an additional 25 mm armour and an improved water-cooled engine."
  
+ czech_panzer_equipment_4:0 "Pz 38 N (t)"
+ czech_panzer_equipment_4_short:0 "Panzer 38 N (t) Lt.TK"
+ czech_panzer_equipment_4_desc:0 "Pz 38(t) with frontal armour increased to 60 mm and an improved water-cooled engine."
+ 
 ###ENGLAND###
  english_fighter:0 "Fighter"
  english_fighter_equipment:0 "Fighter"
