--- a/bicemodded/localisation/english/research_l_english.yml
+++ b/bicemodded/localisation/english/research_l_english.yml
@@ -1798,7 +1798,26 @@
  ARMOUR_TITLE_AC:0 "Armoured Car"
  ARMOUR_TITLE_CAR:0 "Light Vehicles"
  ARMOUR_TITLE_SUPERHEAVY:0 "SUPER   HEAVY"
- ARMOUR_TITLE_FOREIGN:0 "FOREIGN ARMOR"
+ ARMOUR_TITLE_FOREIGN:0 "FOREIGN ARMOR" 
+ 
+ ARMOUR_TITLE_CAR:0 "Light\n Vehicles" 
+ ARMOUR_TITLE_ARMOURED_CAR:0 "Armoured\n Car"
+ ARMOUR_TITLE_LIGHT_TANK:0 "Light\n Tank" 
+ ARMOUR_TITLE_LIGHT_TD:0 "Light Tank\n Destroyer"
+ ARMOUR_TITLE_LIGHT_SPG:0 "Light Tank\n Artillery"
+ ARMOUR_TITLE_LIGHT_AA:0 "Light Tank\n Anti-Air"
+ ARMOUR_TITLE_AMPHIBIOUS_TANK:0 "Amphibious\n Tank"
+ ARMOUR_TITLE_MEDIUM_TANK:0 "Medium\n Tank"
+ ARMOUR_TITLE_MEDIUM_ASSAULT_GUN:0 "Medium\n Assault Gun"
+ ARMOUR_TITLE_MEDIUM_TD:0 "Medium\n Tank Destroyer"
+ ARMOUR_TITLE_MEDIUM_SPG:0 "Medium\n Tank Artillery"
+ ARMOUR_TITLE_MEDIUM_AA:0 "Medium\n Tank Anti-Air"
+ ARMOUR_TITLE_HEAVY_TANK:0 "Heavy\n Tank"
+ ARMOUR_TITLE_HEAVY_TD:0 "Heavy\n Tank Destroyer"
+ ARMOUR_TITLE_HEAVY_ASSAULT_GUNS:0 "Heavy\n Assault Gun"
+ ARMOUR_TITLE_SUPER_HEAVY_TANK:0 "Super Heavy\n Tank"
+ ARMOUR_TITLE_SUPER_HEAVY_ASSAULT_GUNS:0 "Super Heavy\n Assault Gun"
+ 
  ARTILLERY_TITLE_ROCKET:0 "ROCKET ARTILLERY"
  ARTILLERY_TITLE_AT:0 "ANTI-TANK"
  ARTILLERY_TITLE:0 "ARTILLERY"
