Fixes to Tech tress (new Infantry Tab)
also fixes to german equipment
the background of the asymmetric warfare doctrine
fixes / new japanese portraits

--- a/bicemodded/localisation/english/equipment_l_english.yml
+++ b/bicemodded/localisation/english/equipment_l_english.yml
@@ -1124,7 +1124,7 @@
  horse_equipment:0 "Horse Equipment"
  horse_equipment_short:0 "Horses"
  horse_equipment_desc:0 "Age old mobile transport for troops and supplies."
- horse_equipment_0:0 "Horses Equipment"
+ horse_equipment_0:0 "Horse Equipment"
  horse_equipment_0_short:0 "Horses"
  horse_equipment_0_desc:0 "Age old mobile transport for troops and supplies."
  
