--- a/bicemodded/localisation/english/research_l_english.yml
+++ b/bicemodded/localisation/english/research_l_english.yml
@@ -304,6 +304,7 @@
  GER_hmg_2:0 "Improved HMG Teams - MG 34 B"
  GER_hmg_3:0 "HMG Teams - MG 39"
  GER_hmg_4:0 "Advanced HMG - MG 42"
+ GER_hmg_5:0 "Advanced HMG - MG 45"
  mortars:0 "Trench Mortars"
  mortars_desc:0 "Automatic weapons are becoming more portable. Submachine guns have already proven effective and the development of hand-held support weapons must continue."
  mortars_2:0 "Basic Mortar team"
@@ -318,6 +319,7 @@
  GER_mortars_2:0 "Improved Mortar team - 8cm GrW II"
  GER_mortars_3:0 "Advanced Mortar team - 10cm GrW"
  GER_mortars_4:0 "Late War Mortar team - 12cm GrW 42"
+ GER_mortars_4:0 "Late War Mortar team - 12cm GrW 45"
  sniper_team:0 "Sniper Teams"
  sniper_team_desc:0 "Sniper Teams"
  explosives_team:0 "Explosives Teams"
@@ -367,7 +369,9 @@
  tech_mot_recon4_desc:0 ""
  tech_mot_recon5:0 "Late War Motorcycle Recon"
  tech_mot_recon5_desc:0 ""
- semi_motorised_infantry:0 "Semi-Motorized infantry"
+ tech_cavalry:0 "Cavalry"
+ tech_cavalry_desc:0 ""
+ semi_motorised_infantry:0 "Semi-Motorized Infantry"
  semi_motorised_infantry_desc:0 ""
  commando_team:0 "Commando Teams"
  commando_team_desc:0 ""
@@ -405,6 +409,8 @@
  tech_mountaineers4_desc:0 "Preparing for the most arduous mountain missions in high altitudes and low temperatures will require extraordinary training and discipline from our mountain troops."
  tech_special_forces:0 "Special Forces"
  tech_special_forces_desc:0 "Unconventional fighting requires specialist training. We need to ensure that our troops are prepared and able to adapt to harsh conditions."
+ tech_special_forces_support:0 "Special Forces Support"
+ tech_special_forces_support_desc:0 "Unconventional fighting requires specialist training. We need to ensure that our troops are supported by experts in their duties."
  advanced_special_forces:0 "Advanced Special Forces Training"
  advanced_special_forces_desc:0 "With extensive training, we can ensure that our special forces will be able perform above and beyond that of normal men."
  improved_special_forces:1 "Expanded Special Forces Program"
@@ -1346,31 +1352,31 @@
  
  radio:0 "Radio"
  radio_desc:0 "Adopting the inventions of amateur radio operators and extending the use of FM radio will reduce radio interference and allow us to find new uses for radio technology. This will add a need for 3 radio equipment to each main front line non-tank battalion including mechanized."
- HQ_communications:0 "HQ-communications"
+ HQ_communications:0 "HQ-Communications"
  HQ_communications_desc:0 "Maintaining high quality contact with subordinated units is essential for any operation. Finding new ways to do this faster is key to give us an advantage over enemy forces. "
- HQ_radio:0 "Divisional HQ-radio"
+ HQ_radio:0 "Divisional HQ-Radio"
  HQ_radio_desc:0 "With the use of radio's the HQ will have more control over the operations they do. Divisional HQ's will require an additional 2 radio equipment."
- corps_communications:0 "Corps HQ-radio"
+ corps_communications:0 "Corps HQ-Radio"
  corps_communications_desc:0 "With the use of radio's the HQ will have more control over the operations. Even the the corp level will have direct tactical communication with the units in the field to coordinate maneuvers. Divisional HQ's will require an additional 2 radio equipment."
- army_communications:0 "Army HQ-radio" 
+ army_communications:0 "Army HQ-Radio" 
  army_communications_desc:0 "With direct radio lines to army HQ the battleplans for a large front can be changed at the blink of an eye, in theory.
- vehicle_radio:0 "Truck-radio"
+ vehicle_radio:0 "Truck-Radio"
  vehicle_radio_desc:0 "Placing radio into a truck gives the commander the power to coordinate his actions even faster and more coordinated so he can react faster onto enemies moves. This will add a need for 6 radio equipment to each battalion."
- tank_radio:0 "Tank-radio"
+ tank_radio:0 "Tank-Radio"
  tank_radio_desc:0 "Placing radio into a tank gives the commander the power to coordinate his actions even faster and more coordinated so he can react faster onto enemies moves. This will add a need for 4 radio quipment to each battalion."
- tank_radio2:0 "Advanced Tank-radio"
+ tank_radio2:0 "Advanced Tank-Radio"
  tank_radio2_desc:0 "Placing radio into a tank gives the commander the power to coordinate his actions even faster and more coordinated so he can react faster onto enemies moves. This will add a need for an additional 2 radio equipment to each battalion."
- tank_radio3:0 "Advanced Tank-communication"
+ tank_radio3:0 "Advanced Tank-Communication"
  tank_radio3_desc:0 ""
- recon_radio:0 "Recon-radio"
+ recon_radio:0 "Recon-Radio"
  recon_radio_desc:0 "By issuing radios to the recon units, will give the commander the intel even faster than the enemy can react. This will add a need for 2 radio equipment to each battalion."
- infantry_radio:0 "Infantry-radio"
+ infantry_radio:0 "Infantry-Radio"
  infantry_radio_desc:0 "Providing the infantry with a radio enables the infantry to attack/defend with more concentrated fires."
- artillery_radio:0 "Artillery-radio"
+ artillery_radio:0 "Artillery-Radio"
  artillery_radio_desc:0 "Providing the artillery with radio the artillery can support the attacking/defending even better and faster with coordinated fires. This will add a need for 3 radio equipment for each artillery battalion."
- artillery_radio_2:0 "Artillery-radio II"
+ artillery_radio_2:0 "Artillery-Radio II"
  artillery_radio_2_desc:0 "Providing the artillery with radio the artillery can support the attacking/defending even better and faster with coordinated fires. This will add a need for 3 radio equipment for each artillery battalion."
- artillery_radio_3:0 "Artillery-radio III"
+ artillery_radio_3:0 "Artillery-Radio III"
  artillery_radio_3_desc:0 ""
  radios_2:0 "Radio II"
  radios_2_desc:0 "We have enough knowledge to create our own military-purpose only rugged radios that are much more durable than the commercial options."
@@ -1479,13 +1485,16 @@
  GRAND_BATTLEPLAN_DOCTRINE_LABEL:1 "Grand Battleplan Doctrine"
  GRAND_BATTLEPLAN_DOCTRINE_DESC:0 "Extensive planning and preparation before engaging in battle is the key to success."
  MASS_ASSAULT_DOCTRINE_LABEL:1 "Mass Assault Doctrine"
- 
+ ASYMMETRIC_WARFARE_DOCTRINE_LABEL:0 "Asymmetric Warfare Doctrine"
  
  MOBILE_WARFARE_DOCTRINE:0 "Mobile Warfare"
  SUPERIOR_FIREPOWER_DOCTRINE:0 "Superior Firepower"
  GRAND_BATTLEPLAN_DOCTRINE:0 "Grand Battleplan"
  MASS_ASSAULT_DOCTRINE:0 "Mass Assault"
  
+ ASYMMETRIC_WARFARE_DESC:0 "Asymmetric warfare is the art of taking the fight away from the battlefield and even away from the supposed constraints of the opponent's military operation."
+ 
+
  MASS_ASSAULT_DOCTRINE_DESC:0 " "Perfect" weapons are overrated, a large number of "good enough" weapons is the path to victory!"
  MOBILE_INFANTRY_LABEL:0 "MOBILE INFANTRY"
  MOBILE_INFANTRY_LABEL_TT:0 "Improve speed and organization of motorized infantry."
@@ -1510,7 +1519,6 @@
  DEEP_BATTLE_LABEL:0 "DEEP BATTLE"
  DEEP_BATTLE_LABEL_TT:0 "Improve support and abilities to strike deep into enemy territory."
  MASS_MOBILIZATION_LABEL:0 "MASS MOBILIZATION"
- ASYMMETRIC_WARFARE_LABEL:0 "ASYMMETRIC WARFARE"
  MASS_MOBILIZATION_LABEL_TT:0 "Maximize recruitment and strength in numbers."
  FLEET_IN_BEING_DESC:0 "A strong fleet focused around battleships means that we are a force to be reckoned with when deployed at sea."
  TRADE_INTERDICTION_DESC:0 "Against a stronger naval opponent we can focus on tying up their fleet and destroying supply lines to starve their war machine."
@@ -1788,6 +1796,8 @@
  INFANTRY_TITLE_NV:0 "N-V"
  INFANTRY_TITLE_SPECIAL:0 "SPECIAL FORCES"
  INFANTRY_TITLE_MOTORISED:0 "MOTORIZED"
+ 
+ 
  ARMOUR_TITLE:0 "ARMOR"
  ARMOUR_TITLE_INF:0 "Assault Guns"
  ARMOUR_TITLE_INFTANK:0 "Infantry Tanks"
@@ -2182,7 +2192,6 @@
  assymetric_defense_desc:0 "We will not do standard battles, we will use the terrain to our advantages and throw the enemy out of their comfort zone and into confusion"
  FIN_assymetric_defense:0 "Motti Tactics"
  FIN_assymetric_defense_desc:0 "We will not do standard battles, we will use the terrain to our advantages and throw the enemy out of their comfort zone and into confusion"
- ASYMMETRIC_WARFARE_DESC:0 "Asymmetric warfare is the art of taking the fight away from the battlefield and even away from the supposed constraints of the opponent's military operation."
  cat_guerilla_warfare:0 "Asymmetric Warfare"
  tech_support:0 "Support Equipment"
  tech_support_desc:0 "Radios, Tents, Tools & other equipment used to support troops."
