next subtitle test teaching dire :D

--- a/bicemodded/localisation/english/research_l_english.yml
+++ b/bicemodded/localisation/english/research_l_english.yml
@@ -1810,20 +1810,20 @@
  ARMOUR_TITLE_SUPERHEAVY:0 "SUPER   HEAVY"
  ARMOUR_TITLE_FOREIGN:0 "FOREIGN ARMOR" 
  
-ARMOUR_TITLE_CAR:0 "Light\n Vehicles" 
+ ARMOUR_TITLE_CAR:0 "Light\n Vehicles" 
  ARMOUR_TITLE_ARMOURED_CAR:0 "Armoured\n Cars"
  ARMOUR_TITLE_LIGHT_TANK:0 "Light\n Tanks" 
  ARMOUR_TITLE_LIGHT_TD:0 "Light Tank\n Destroyers"
- ARMOUR_TITLE_LIGHT_SPG:0 "Light Self-\nPropelled Artillery"
- ARMOUR_TITLE_LIGHT_AA:0 "Light Self-\nPropelled Anti-Air"
+ ARMOUR_TITLE_LIGHT_SPG:0 "Light\n Self-Propelled\n Artillery"
+ ARMOUR_TITLE_LIGHT_AA:0 "Light \n Self-Propelled\n Anti-Air"
  ARMOUR_TITLE_AMPHIBIOUS_TANK:0 "Amphibious\n Tanks"
  ARMOUR_TITLE_MEDIUM_TANK:0 "Medium\n Tanks"
  ARMOUR_TITLE_MEDIUM_ASSAULT_GUN:0 "Medium\n Assault Guns"
- ARMOUR_TITLE_MEDIUM_TD:0 "Medium\n Tank Destroyers"
- ARMOUR_TITLE_MEDIUM_SPG:0 "Medium  Self-\n Propelled  Artillery"
- ARMOUR_TITLE_MEDIUM_AA:0 "Medium  Self-\nPropelled Anti-Air"
+ ARMOUR_TITLE_MEDIUM_TD:0 "Medium\n Tank \nDestroyers"
+ ARMOUR_TITLE_MEDIUM_SPG:0 "Medium \n Self-Propelled \n Artillery"
+ ARMOUR_TITLE_MEDIUM_AA:0 "Medium\n Self-Propelled\n Anti-Air"
  ARMOUR_TITLE_HEAVY_TANK:0 "Heavy\n Tanks"
- ARMOUR_TITLE_HEAVY_TD:0 "Heavy\n Tank Destroyers"
+ ARMOUR_TITLE_HEAVY_TD:0 "Heavy\n Tank \nDestroyers"
  ARMOUR_TITLE_HEAVY_ASSAULT_GUNS:0 "Heavy\n Assault Guns"
  ARMOUR_TITLE_SUPER_HEAVY_TANK:0 "Super Heavy\n Tanks"
  ARMOUR_TITLE_SUPER_HEAVY_ASSAULT_GUNS:0 "Super Heavy\n Assault Guns"
