how subtitles should look like

--- a/bicemodded/localisation/english/research_l_english.yml
+++ b/bicemodded/localisation/english/research_l_english.yml
@@ -1806,27 +1806,27 @@
  ARMOUR_TITLE_LIGHT:0 "LIGHT"
  ARMOUR_TITLE_AMPH:0 "AMPHIBIOUS"
  ARMOUR_TITLE_AC:0 "Armoured Car"
- ARMOUR_TITLE_CAR:0 "Light Vehicles"
+ #ARMOUR_TITLE_CAR:0 "Light Vehicles"
  ARMOUR_TITLE_SUPERHEAVY:0 "SUPER   HEAVY"
  ARMOUR_TITLE_FOREIGN:0 "FOREIGN ARMOR" 
  
- ARMOUR_TITLE_CAR:0 "Light\n Vehicles" 
- ARMOUR_TITLE_ARMOURED_CAR:0 "Armoured\n Cars"
- ARMOUR_TITLE_LIGHT_TANK:0 "Light\n Tanks" 
- ARMOUR_TITLE_LIGHT_TD:0 "Light Tank\n Destroyers"
- ARMOUR_TITLE_LIGHT_SPG:0 "Light\n Self-Propelled\n Artillery"
- ARMOUR_TITLE_LIGHT_AA:0 "Light \n Self-Propelled\n Anti-Air"
- ARMOUR_TITLE_AMPHIBIOUS_TANK:0 "Amphibious\n Tanks"
- ARMOUR_TITLE_MEDIUM_TANK:0 "Medium\n Tanks"
- ARMOUR_TITLE_MEDIUM_ASSAULT_GUN:0 "Medium\n Assault Guns"
- ARMOUR_TITLE_MEDIUM_TD:0 "Medium\n Tank \nDestroyers"
- ARMOUR_TITLE_MEDIUM_SPG:0 "Medium \n Self-Propelled \n Artillery"
- ARMOUR_TITLE_MEDIUM_AA:0 "Medium\n Self-Propelled\n Anti-Air"
- ARMOUR_TITLE_HEAVY_TANK:0 "Heavy\n Tanks"
- ARMOUR_TITLE_HEAVY_TD:0 "Heavy\n Tank \nDestroyers"
- ARMOUR_TITLE_HEAVY_ASSAULT_GUNS:0 "Heavy\n Assault Guns"
- ARMOUR_TITLE_SUPER_HEAVY_TANK:0 "Super Heavy\n Tanks"
- ARMOUR_TITLE_SUPER_HEAVY_ASSAULT_GUNS:0 "Super Heavy\n Assault Guns"
+ ARMOUR_TITLE_CAR:0 "light\nvehicles" 
+ ARMOUR_TITLE_ARMOURED_CAR:0 "armoured\ncars"
+ ARMOUR_TITLE_LIGHT_TANK:0 "light\ntanks" 
+ ARMOUR_TITLE_LIGHT_TD:0 "light tank\ndestroyers"
+ ARMOUR_TITLE_LIGHT_SPG:0 "light self-\npropelled\nartillery"
+ ARMOUR_TITLE_LIGHT_AA:0 "light self-\npropelled\nanti-air"
+ ARMOUR_TITLE_AMPHIBIOUS_TANK:0 "amphibious\ntanks"
+ ARMOUR_TITLE_MEDIUM_TANK:0 "medium\ntanks"
+ ARMOUR_TITLE_MEDIUM_ASSAULT_GUN:0 "medium\nassault guns"
+ ARMOUR_TITLE_MEDIUM_TD:0 "medium\n tank \ndestroyers"
+ ARMOUR_TITLE_MEDIUM_SPG:0 "Medium self-\npropelled\nartillery"
+ ARMOUR_TITLE_MEDIUM_AA:0 "medium self-\npropelled\nanti-air"
+ ARMOUR_TITLE_HEAVY_TANK:0 "heavy\ntanks"
+ ARMOUR_TITLE_HEAVY_TD:0 "heavy\ntank\ndestroyers"
+ ARMOUR_TITLE_HEAVY_ASSAULT_GUNS:0 "heavy\nassault guns"
+ ARMOUR_TITLE_SUPER_HEAVY_TANK:0 "super heavy\ntanks"
+ ARMOUR_TITLE_SUPER_HEAVY_ASSAULT_GUNS:0 "super heavy\nassault guns"
  
  ARTILLERY_TITLE_ROCKET:0 "ROCKET ARTILLERY"
  ARTILLERY_TITLE_AT:0 "ANTI-TANK"
