ai template fixing
localization upgrade to 1.14

--- a/bicemodded/localisation/english/air_l_english.yml
+++ b/bicemodded/localisation/english/air_l_english.yml
@@ -406,7 +406,8 @@
  adjuster_mission_port_strike:0 "$AIRWING_MISSION_TYPE_PORT_STRIKE$"
  adjuster_mission_recon:0 "$AIRWING_MISSION_TYPE_RECON$"
  adjuster_mission_strategic_bomber:0 "$AIRWING_MISSION_TYPE_STRATEGIC_BOMBER$"
- CREATE_AIRWING_VIEW_FILTER_DESC:0 "Show only $ARCHTYPE|H$ ($COUNT|H$ match)"
+ CREATE_AIRWING_VIEW_FILTER_BREAKDOWN:0 "$ARCHTYPE|H$ ($COUNT|H$ match)"
+ CREATE_AIRWING_VIEW_FILTER_DESC:0 "Show only $ARCHTYPES$"
  QUICK_DEPLOY_WING_ENABLE_DESC:0 "Add $PLANE_TYPE|H$ air wing.\nYou have $COUNT|H$ $PLANE_TYPE$ planes in your stockpile.\n\n§GClick§! to add §H1§!\n§GCtrl+click§! to add §H5§!\n§GShift+click§! to add §H10§!"
  QUICK_DEPLOY_WING_DISABLE_NO_EQUIP_DESC:0 "Add $PLANE_TYPE|H$ air wing.\nYou have zero $PLANE_TYPE$ plane in your stockpile.\n\nProduce more $PLANE_TYPE|H$ planes in order to deploy more."
  QUICK_DEPLOY_WING_DISABLE_NO_MAN_DESC:0 "Add $PLANE_TYPE|H$ air wing.\nYou don't have enough manpower."
