--- a/bicemodded/localisation/english/technology_sharing_l_english.yml
+++ b/bicemodded/localisation/english/technology_sharing_l_english.yml
@@ -89,3 +89,15 @@
  ITA_franco_italian_tech_sharing_desc:0 "We can use our diplomatic ties with France to exchange technologies between our two nations."
  ITA_italian_hegemony_program_name:0 "Italian Technological Sharing Program"
  ITA_italian_hegemony_program_desc:0 "We must learn from our overlords."
+ CHL_communist_tech_sharing_group_name: "The Santiago International Research Community"
+ CHL_communist_tech_sharing_group_desc: "A joint program for social and technological advancements headquartered in Santiago, Chile."
+ CHL_fascist_tech_sharing_group_name: "The Hispanic Advancement Society"
+ CHL_fascist_tech_sharing_group_desc: "A joint research society founded between the members of the Hispanic Alliance, with the goal of furthering their technology jointly as far as possible."
+ ARG_italian_argentine_tech_sharing_group_name: "The Italian Argentine Agreement"
+ ARG_italian_argentine_tech_sharing_group_desc: "A joint research program developed in honour of Italian-Argentine diplomacy."
+ BRA_commonwealth_tech_sharing_name: "Lusophone Commonwealth Technology Agreement"
+ BRA_commonwealth_tech_sharing_desc: "The member states of the Lusophone Commonwealth have agreed to share their technological developments for the mutual benefit of all."
+ BRA_USA_tech_sharing_group_name: "US-Brazil Technology Exchange Program"
+ BRA_USA_tech_sharing_group_desc: "The United States and Brazil have agreed to pool their scientific knowledge following maneuvers by the Brazilian government to work more closely with its northern neighbor on matters of foreign policy."
+ BRA_south_american_tech_sharing_group_name: "Latin American Research Council"
+ BRA_south_american_tech_sharing_group_desc: "The nations of Latin America have agreed to pool their scientific knowledge for mutual benefit of the region."
