--- a/bicemodded/localisation/english/tfv_events_l_english.yml
+++ b/bicemodded/localisation/english/tfv_events_l_english.yml
@@ -173,6 +173,19 @@
  tfv_canada.62.t:0 "Imperial Hubris"
  tfv_canada.62.d:0 "Invoking their crumbling "imperial right," and calling upon Labrador and Newfoundland's statuses as colonial possessions to be protected [From.GetNameDef] has refused to cede land that is rightfully ours! These people are [Root.GetAdjective]s, and Newfoundland and Labrador hold [Root.GetAdjective] resources, but they must answer to [From.GetAdjective] masters.\nThis is an unacceptable state of affairs, but it is clear that [From.GetNameDef] cannot be convinced of a diplomatic solution..."
  tfv_canada.62.a:1 "[ROOT.GetNameDefCap] will be one!"
+ tfv_canada.70.t: "[FROM.GetName] wishes for Union with Newfoundland"
+ tfv_canada.70.desc: "[FROM.GetLeader] has approached us after a vote that was held in the Canadian parliament to request for us to sign a revision to the previous British North America Act, and through it declare union between [FROM.GetNameDef] and the colony of Newfoundland and Labrador."
+ tfv_canada.70.a: "We see no harm in this"
+ tfv_canada.70.b: "Goodness no!"
+ tfv_canada.71.t: "[FROM.GetName] sign the Newfoundland Act"
+ tfv_canada.71.desc: "Our great friends in [FROM.GetName] have accepted our request and have signed the proposed Newfoundland Act, effectively handing over sovereignty over Newfoundland and Labrador to us in the process. This is a great day for Canada!"
+ tfv_canada.71.a: "Splendid!"
+ tfv_canada.72.t: "[FROM.GetName] refuses to sign the Declaration"
+ tfv_canada.72.desc: "Those who we thought to be our great friends, the [FROM.GetAdjective], have denied our proposal to unify with Newfoundland and Labrador. Their stubborn lawmakers and politicians have shown us their position on this matter, and we know how we must act with them going forward."
+ tfv_canada.72.a: "They do realize this harms our relations?"
+ tfv_canada.73.t: "[CAN.GetName] is Given Newfoundland and Labrador by Britain"
+ tfv_canada.73.desc: "After having signed the Newfoundland Act, sovereignty of Newfoundland and Labrador is to be given over to our ally [CAN.GetNameDef]. Though they state that this is non-negotiable, they do at least acknowledge that we should be given economic compensation for giving up our bases in the area."
+ tfv_canada.73.a: "At least we get compensated..."
  mex_nationalists_chosen:0 "Side with the Nationalists."
  mex_republicans_chosen:0 "Side with the Republicans."
  tfv_south_africa.1.t:0 "[From.GetNameDefCap] Requests African Mandate"
