--- a/bicemodded/localisation/english/traits_l_english.yml
+++ b/bicemodded/localisation/english/traits_l_english.yml
@@ -693,14 +693,14 @@
  SPOTTER_TRIGGER_TT:0 "Spotting the enemy"
  FLY_SWATTER_TRIGGER_TT:0 "Fighting enemy air units"
  IRONSIDE_TRIGGER_TT:0 "Commanding or fighting capital ships"
- BLOCKADE_RUNNER_TRIGGER_TT:0 "Bravely retreating in the face of overwhelming force"
+ BLOCKADE_RUNNER_TRIGGER_TT: "Have a task force in combat where every ship in it has over 37 knots speed"
  spotter:0 "Spotter"
  spotter_desc:0 "The Spotter pays special attention to keeping an eye out for enemy fleets."
  spotter_II:0 "Spotter Master"
  spotter_II_desc:0 "The Spotter pays special attention to keeping an eye out for enemy fleets."
  spotter_III:0 "Spotter Genius"
  spotter_III_desc:0 "The Spotter pays special attention to keeping an eye out for enemy fleets."
- fly_swatter:0 "Fly swatter"
+ fly_swatter:0 "Fly Swatter"
  fly_swatter_desc:0 "Realizing the danger posed to even our most powerful ships by airplanes, the Fly Swatter swiftly disposes of anything that flies."
  ironside:0 "Ironside"
  ironside_desc:0 "Determined to defend our home waters with the most powerful ships our navy can muster."
@@ -983,10 +983,12 @@
  lone_wolf_desc:0 "§LWhile organising a large fleet is a difficult task, so is using a small force to its maximum potential.§!"
  concealment_expert:0 "Concealment Expert"
  concealment_expert_desc:0 "§LThis officer has completed the government-mandated training course on how not to be seen.§!"
- mine_sweeper:0 "Mine Sweeper"
- mine_sweeper_desc:0 "§LAny ship can be a minesweeper once. Making it sweep several mines takes skill.§!"
- mine_layer:0 "Mine Layer"
- mine_layer_desc:0 "§LDropping highly explosive mines designed to sink ships out of a ship you're on requires a certain mental fortitude. This officer has plenty of it.§!"
+ mine_sweeper:0 "Mine Sweeper" #obsolete, refer to mine_craft
+ mine_sweeper_desc:0 "§LAny ship can be a minesweeper once. Making it sweep several mines takes skill.§!" #obsolete, refer to mine_craft
+ mine_layer:0 "Mine Layer" #obsolete, refer to mine_craft
+ mine_layer_desc:0 "§LDropping highly explosive mines designed to sink ships out of a ship you're on requires a certain mental fortitude. This officer has plenty of it.§!" #obsolete, refer to mine_craft
+ mine_craft:0 "Mine Craft" 
+ mine_craft_desc:0 "§LAll sailors know the terror of these creeping weapons, the low hiss of the fuse, and the sudden BLAST!§!"
  cruiser_captain:0 "Cruiser Captain"
  cruiser_captain_desc:0 "§LThis officer has shown great skill in operating cruisers.§!"
  big_guns_expert:0 "Big Guns Expert"
@@ -1391,6 +1393,161 @@
  army_chief_planning_3:1 "Army Planning\n(Genius)"
  devoted_marxist:0 "Devoted Marxist"
  leftist_independent:0 "Independent Leftist"
+ 
+ ### Canada ###
+ CAN_liberal_corporatist: "Liberal Corporatist"
+ CAN_father_of_the_canadian_welfare_state: "Father of the Canadian Welfare State"
+ CAN_canadian_fuhrer: "The Canadian Führer"
+ CAN_social_gospel: "Pioneer of the Canadian Social Gospel"
+
+ ### ARGENTINA ###
+ ARG_fraudulent_industrialist: "Fraudulent Industrialist"
+ ARG_radical_antipersonnel: "Radical Antipersonnel"
+ ARG_conservative_traditionalist: "Conservative Traditionalist"
+ ARG_moderate_dictator: "Moderate Dictator"
+ ARG_brigadier_general: "Brigadier General"
+ ARG_argentine_nationalist: "Argentine Nationalist"
+ ARG_harsh_democrat: "Harsh Democrat"
+ ARG_feminist_revolutionary: "Feminist Revolutionary"
+ ARG_communist_insurrectionist: "Communist Insurrectionist"
+ ARG_anarchosyndicalist: "Anarcho-syndicalist"
+ ARG_socialist_feminist: "Socialist Feminist"
+ ARG_university_rector: "University Rector"
+ ARG_nobel_peace_prize_winner: "Nobel Peace Prize Winner"
+ ARG_bolivar_agent: "Bolívar Agent"
+ ARG_prominent_centrist: "Prominent Centrist"
+ ARG_father_of_argentine_democracy: "Father of Argentine Democracy"
+ ARG_peronism_trait: "$ARG_peronism$"
+ ARG_womans_peronist: "Women's Peronist Advocate"
+
+ # Brazil
+ BRA_father_of_the_poor: "Father of the Poor" 
+ BRA_reluctant_integralist: "Reluctant Integralist"
+ BRA_authoritarian_populist: "Authoritarian Populist"
+ BRA_supreme_court_justice: "Supreme Court Justice"
+ BRA_political_fox: "Political Fox"
+ BRA_modernist_architect: "Modernist Architect"
+ BRA_distinguished_diplomat: "Distinguished Diplomat"
+ BRA_minister_of_transport: "Minister of Transport"
+ BRA_right_wing_ideologue: "Right-Wing Ideologue"
+ BRA_head_of_political_police: "Head of the Political Police"
+ BRA_nobel_peace_prize_nominee: "Nobel Peace Prize Nominee"
+ BRA_deposed_former_president: "Deposed Former President"
+ BRA_renowned_ambassador: "Renowned Ambassador"
+ BRA_anti_authoritarian: "Anti-Authoritarian"
+ BRA_academic_writer: "Academic Writer"
+ BRA_education_pioneer: "Education Pioneer"
+ BRA_democratic_engineer: "Democratic Engineer"
+ BRA_sugar_king: "Sugar King"
+ BRA_minister_of_defense: "Minister of Defense"
+ BRA_politically_educated: "Politically Educated"
+ BRA_the_white_dove: "The White Dove"
+ BRA_militant_communist: "Militant Communist"
+ BRA_soviet_spy: "Soviet Spy"
+ BRA_emperor_trait: "Emperor of Brazil"
+ BRA_coffee_king: "Coffee King"
+ BRA_vengeful_industrialist: "Vengeful Industrialist"
+ BRA_controversial_academic: "Controversial Academic"
+
+ # Chile
+ batllista_traditionalist: "Batllista Traditionalist"
+ the_german_connection: "The German Connection"
+ pan_americanist_caudillo: "Pan-Americanist Caudillo"
+ pro_allied_politician: "Pro-Allied Politician"
+ JUNO_the_lion_of_tarapaca: "León de Tarapacá"
+ JUNO_el_jefe: "El Jefe"
+ JUNO_el_jefe_advisor_trait: "El Jefe"
+ JUNO_father_of_industrialization: "Father of Industrialization"
+ JUNO_gobernar_es_educar: "Gobernar es Educar"
+ JUNO_easter_island_socialist: "Easter Island Socialist"
+ JUNO_minister_trade_development: "Minister of Trade and Development"
+ JUNO_president_of_the_senate: "President of the Senate"
+ JUNO_president_of_the_senate_2: "President of the Senate"
+ JUNO_stock_market_financier: "Stock Market Financier"
+ JUNO_minister_of_finance: "Minister of Finance"
+ JUNO_the_workers_president: "The Workers' President"
+ JUNO_the_miners_representative: "The Miners' Representative"
+ JUNO_the_general_president: "The General President"
+ JUNO_ibanismo: "Ibañismo"
+ JUNO_national_socialist_vanguard: "The National Socialist Vanguard"
+ JUNO_pan_hispanic_theorist: "Pan-Hispanic Theorist"
+ JUNO_fascist_educator: "Fascist Educator"
+ JUNO_devoted_trotskyist: "Devoted Trotskyist"
+ JUNO_minister_of_public_works: "Minister of Public Works"
+ JUNO_spearhead_of_the_alianza_democratica: "Spearhead of the Alianza Democrática de Chile"
+ JUNO_popular_lawyer: "Popular Lawyer"
+ JUNO_friend_of_healthcare: "Friend of Healthcare"
+ JUNO_minister_of_public_health: "Minister of Public Health"
+ JUNO_sovereign_of_patagonia_1: "Roi d'Araucanie et de Patagonie"
+ JUNO_sovereign_of_patagonia_2: "Roi d'Araucanie et de Patagonie"
+ JUNO_sovereign_of_patagonia_3: "Roi d'Araucanie et de Patagonie"
+ JUNO_defender_of_araucanian_soverighnty: "Defender of Araucanían Sovereignty"
+ JUNO_defender_of_araucania: "Defender of Araucanía"
+ JUNO_modern_abajino_lonko: "Modern Abajino Lonko"
+ JUNO_mapuche_economist: "Mapuche Economist"
+ JUNO_the_legacy_of_1881: "The Legacy of 1881"
+ JUNO_minister_of_defense: "Minister of Defense"
+ JUNO_defender_of_the_race: "Defender of the Race"
+ JUNO_militant_communist: "Militant Communist"
+ JUNO_radical_suffragette: "Radical Suffragette"
+ JUNO_reformist_minister_of_health: "Reformist Minister of Health"
+ JUNO_conservative_businessman: "Conservative Businessman"
+ JUNO_apostlic_prefect_of_araucania: "Apostolic Prefect of Araucania"
+ JUNO_famous_soprano: "Famous Soprano"
+ JUNO_popular_latinian_poet: "Popular Latinian Poet"
+ JUNO_socialist_economist: "Socialist Economist"
+ JUNO_minister_of_defense_emilio: "Minister of Defense"
+ JUNO_minister_of_foreign_affairs: "Minister of Foreign Affairs"
+ JUNO_agricultural_national_socialist: "Agricultural National Socialist"
+ JUNO_minister_of_social_assistance: "Minister of Social Assistance"
+ JUNO_president_of_the_central_bank: "President of the Central Bank"
+ JUNO_mapuche_traditionalist: "Mapuche Traditionalist"
+ JUNO_anarcho_socialist: "Anarcho-Socialist"
+ JUNO_the_national_falange: "The National Falange"
+ JUNO_university_fascist: "University Fascist"
+ JUNO_christian_democrat: "Influential Christian Democrat"
+ CHL_minister_of_transport: "Transport Minister"
+ JUNO_anti_communist_action: "Chilean Anticommunist Action"
+ JUNO_miister_of_lands_and_colonization: "Minister of Lands and Colonization"
+ JUNO_miister_of_lands_and_colonization_2: "Minister of Lands and Colonization"
+ JUNO_housing_front_champion: "National Housing Front Champion"
+ JUNO_national_socialist_occultist: "National Socialist Occultist"
+ JUNO_educational_reformer: "Educational Reformer"
+ JUNO_miniter_of_economy_and_commerce: "Minister of Economy and Commerce"
+ JUNO_unpopular_economist: "Unpopular Economist"
+ JUNO_bolivian_falange: "Founder of the Bolivian Socialist Falange"
+ JUNO_military_socialist: "Military Socialist"
+ JUNO_nationalizing_foreign_minister: "Foreign Minister"
+ JUNO_revolutionary_writer: "Revolutionary Writer"
+ JUNO_revolutionary_feberista_hero: "Revolutionary Febrerista Hero"
+ JUNO_red_banner_leader: "Leader of the Red Banner"
+ JUNO_president_of_victory: "The President of Victory"
+ JUNO_popular_among_the_people: "Popular Among the People"
+ JUNO_feminist_editor: "Feminist Editor"
+ rapa_nui_ariki: "Rapa Nui 'Ariki"
+ cultural_preserver: "Cultural Preserver and Scholar"
+ communist_council_trait: "People's Revolutionary Council"
+ non_aligned_council_trait: "People's United Freedom Council"
+ democratic_council_trait: "Republican People's Council"
+ fascist_council_trait: "Corporativist Advisory Board"
+ emperor_of_france_and_the_americas: "The True Emperor of France and the Americas"
+ JUNO_ibanist_prime_minister: "The Father of Ibañismo"
+ JUNO_king_of_chile: "Grand King of the Chilean Fatherland"
+ JUNO_fascist_theologian: "Fascist Theologian"
+ JUNO_military_sapa_inca: "Sapa Inca"
+ JUNO_king_of_el_dorado: "Resplendent King of El Dorado"
+ JUNO_high_chief_of_hispaniola: "High Chief of Hispaniola"
+ JUNO_mapuche_journalist: "Mapuche Journalist"
+ JUNO_alianca_nacional_libertadora_council: "Council of the ANL"
+ JUNO_aligned_with_stalin: "Aligned With Stalin"
+ JUNO_the_permanent_leader: "The Permanent Leader"
+ JUNO_cult_of_personality: "Cult of Personality"
+ BRA_bandit_revolutionary: "Bandit Revolutionary"
+ JUNO_unpopular: "Unpopular"
+ JUNO_minister_of_war_and_navy: "Minister of War and Navy"
+ JUNO_mayor_of_the_city_of_asuncion: "Mayor of the City of Asunción"
+ JUNO_emergency_powers: "Wielder of Emergency Powers"
+ JUNO_uruguyan_revisionist: "Uruguayan Revisionist"
  soviet_thaw:0 "Pro-Soviet"
  LAT_military_dictator:0 "Military Dictator"
  amateur_aviator_hess:0 "First Among Equals"
