--- a/bicemodded/localisation/english/triggers_l_english.yml
+++ b/bicemodded/localisation/english/triggers_l_english.yml
@@ -123,6 +123,8 @@
  TRIGGER_HAS_DEPLOYED_AIR_FORCE_SIZE_OF_TYPE_AT_MOST:0 "Has deployed at most $AMOUNT|H$ $TYPE|H$ aircraft"
  TRIGGER_HAS_VOLUNTEERS_MORE_THAN:0 "Has $VALUE|H$ volunteers or more from $COUNTRY2|H$"
  TRIGGER_HAS_VOLUNTEERS_LESS_THAN:0 "Has fewer than $VALUE|H$ volunteers from $COUNTRY2|H$"
+ TRIGGER_HAS_WAR_LENGTH_WITH_LESS_THAN: "Has been at war with $COUNTRY2|H$ shorter than $VALUE|H$"
+ TRIGGER_HAS_WAR_LENGTH_WITH_MORE_THAN: "Has been at war with $COUNTRY2|H$ longer than $VALUE|H$"
  TRIGGER_IS_LEADING_VOLUNTEERS:0 "Is leading a volunteer group"
  TRIGGER_IS_LEADING_VOLUNTEERS_IN_COUNTRY:0 "Is leading a volunteer group in $COUNTRY1|H$"
  TRIGGER_AI_WANTS_DIVISIONS_MORE_THAN:0 "Wants more divisions than $AMOUNT|H.0$"
@@ -387,6 +389,8 @@
  TRIGGER_IS_NOT_MAJOR:1 "Is not considered a Major Country"
  TRIGGER_MORE_THAN_X_IRRATIONALITY:0 "Is more irrational than $IRRATIONALITY|Y$"
  TRIGGER_LESS_THAN_X_IRRATIONALITY:0 "Is less irrational than $IRRATIONALITY|Y$"
+ TRIGGER_MORE_THAN_X_WAR_LENGTH: "Has been at war for more than $MONTHS|Y$ months"
+ TRIGGER_LESS_THAN_X_WAR_LENGTH: "Has been at war for less than $MONTHS|Y$ months"
  TRIGGER_IS_IN_HOME_AREA:0 "Is connected to the owner's capital"
  TRIGGER_MORE_THAN_X_POPULATION:0 "Has more than $POPULATION$ state population"
  TRIGGER_LESS_THAN_X_POPULATION:0 "Has less than $POPULATION$ state population"
