--- a/bicemodded/localisation/english/wtt_decisions_l_english.yml
+++ b/bicemodded/localisation/english/wtt_decisions_l_english.yml
@@ -105,6 +105,8 @@
  form_commonwealth:0 "Re-form the Commonwealth"
  form_united_netherlands:0 "Repudiate the Treaty of London"
  form_united_central_america:0 "Reconstitute the Federal Republic"
+ integrate_northern_gran_colombia: "Incorporate Panamá"
+ integrate_yucatan: "Incorporate the Republic of Yucatán"
  form_baltic_federation:0 "Unify the Baltics"
  form_ottoman_empire:0 "Re-form the Ottoman Empire"
  form_european_union:0 "Realize European Unity"
