--- a/bicemodded/localisation/english/factions_l_english.yml
+++ b/bicemodded/localisation/english/factions_l_english.yml
@@ -105,3 +105,4 @@
  DEN_nordic_cooperation_alliance: "Nordic Cooperation Alliance"
  DEN_northern_national_front: "Northern National Front"
  DEN_northern_security_pact: "Northern Security Pact"
+ BRA_socialist_latin_american_cooperative: "The Latin American Socialist Cooperative"
