--- a/bicemodded/localisation/english/ideas_l_english.yml
+++ b/bicemodded/localisation/english/ideas_l_english.yml
@@ -5799,3 +5799,6 @@
  CAN_unified_communist_party:0 "The People, United"
  CAN_unified_communist_party_desc:0 "Old rifts are mended; relationships repaired. Yet our tolerance in service of a shared destiny is looked upon with suspicion by those who pay only lip service to the cause, driven by that basest of motivations: the pursuit of power."
  CAN_true_revolution:0 "True Revolution"
+ 
+ will_turn_to: "Will Turn Into"
+ upon_timeout: "Upon Timeout"
