--- a/bicemodded/localisation/english/traits_l_english.yml
+++ b/bicemodded/localisation/english/traits_l_english.yml
@@ -694,14 +694,14 @@
  SPOTTER_TRIGGER_TT:0 "Spotting the enemy"
  FLY_SWATTER_TRIGGER_TT:0 "Fighting enemy air units"
  IRONSIDE_TRIGGER_TT:0 "Commanding or fighting capital ships"
- BLOCKADE_RUNNER_TRIGGER_TT:0 "Bravely retreating in the face of overwhelming force"
+ BLOCKADE_RUNNER_TRIGGER_TT: "Have a task force in combat where every ship in it has over 37 knots speed"
  spotter:0 "Spotter"
  spotter_desc:0 "The Spotter pays special attention to keeping an eye out for enemy fleets."
  spotter_II:0 "Spotter Master"
  spotter_II_desc:0 "The Spotter pays special attention to keeping an eye out for enemy fleets."
  spotter_III:0 "Spotter Genius"
  spotter_III_desc:0 "The Spotter pays special attention to keeping an eye out for enemy fleets."
- fly_swatter:0 "Fly swatter"
+ fly_swatter:0 "Fly Swatter"
  fly_swatter_desc:0 "Realizing the danger posed to even our most powerful ships by airplanes, the Fly Swatter swiftly disposes of anything that flies."
  ironside:0 "Ironside"
  ironside_desc:0 "Determined to defend our home waters with the most powerful ships our navy can muster."
@@ -984,10 +984,12 @@
  lone_wolf_desc:0 "§LWhile organising a large fleet is a difficult task, so is using a small force to its maximum potential.§!"
  concealment_expert:0 "Concealment Expert"
  concealment_expert_desc:0 "§LThis officer has completed the government-mandated training course on how not to be seen.§!"
- mine_sweeper:0 "Mine Sweeper"
- mine_sweeper_desc:0 "§LAny ship can be a minesweeper once. Making it sweep several mines takes skill.§!"
- mine_layer:0 "Mine Layer"
- mine_layer_desc:0 "§LDropping highly explosive mines designed to sink ships out of a ship you're on requires a certain mental fortitude. This officer has plenty of it.§!"
+ mine_sweeper:0 "Mine Sweeper" #obsolete, refer to mine_craft
+ mine_sweeper_desc:0 "§LAny ship can be a minesweeper once. Making it sweep several mines takes skill.§!" #obsolete, refer to mine_craft
+ mine_layer:0 "Mine Layer" #obsolete, refer to mine_craft
+ mine_layer_desc:0 "§LDropping highly explosive mines designed to sink ships out of a ship you're on requires a certain mental fortitude. This officer has plenty of it.§!" #obsolete, refer to mine_craft
+ mine_craft:0 "Mine Craft" 
+ mine_craft_desc:0 "§LAll sailors know the terror of these creeping weapons, the low hiss of the fuse, and the sudden BLAST!§!"
  cruiser_captain:0 "Cruiser Captain"
  cruiser_captain_desc:0 "§LThis officer has shown great skill in operating cruisers.§!"
  big_guns_expert:0 "Big Guns Expert"
