--- a/bicemodded/localisation/english/modifiers_l_english.yml
+++ b/bicemodded/localisation/english/modifiers_l_english.yml
@@ -29,6 +29,8 @@
  MODIFIER_POLITICAL_POWER_GAIN:0 "Daily Political Power Gain"
  MODIFIER_POLITICAL_POWER_COST:0 "Daily Political Power Cost"
  MODIFIER_POLITICAL_POWER_FACTOR:0 "Political Power Gain"
+ political_power_factor_tt: " $MODIFIER_POLITICAL_POWER_FACTOR$: $RIGHT|+=%1$"
+ political_power_cost_tt: "$MODIFIER_POLITICAL_POWER_COST$: $RIGHT|+=%1$"
  MODIFIER_NAVAL_HIT_CHANCE:0 "Naval Hit Chance"
  MODIFIER_NAVAL_SPEED:0 "Naval Speed"
  MODIFIER_NAVAL_DETECTION:0 "Naval Detection"
@@ -84,6 +86,7 @@
  winter_attrition_factor_tt: " $MODIFIER_WINTER_ATTRITION_FACTOR$: $RIGHT|-=%1$"
  MODIFIER_WINTER_ATTRITION:0 "Winter Attrition"
  MODIFIER_HEAT_ATTRITION_FACTOR:0 "Heat Attrition"
+ heat_attrition_factor_tt: "$MODIFIER_HEAT_ATTRITION_FACTOR$: $RIGHT|-=%1$"
  MODIFIER_HEAT_ATTRITION:0 "Heat Attrition"
  MODIFIER_SPOTTING_CHANCE_FACTOR:1 "Spotting Speed"
  spotting_chance_tt: " $MODIFIER_SPOTTING_CHANCE_FACTOR$: $RIGHT|+=%$"
@@ -119,7 +122,7 @@
  MODIFIER_TAC_BOMBING:0 "Tactical Bombing"
  MODIFIER_AIR_SUPERIORITY_FACTOR:0 "Air Superiority"
  MODIFIER_AIR_SUPERIORITY:0 "Air Superiority"
- MODIFIER_CONSUMER_GOODS_FACTOR:1 "Consumer Goods Factories Factor"
+ MODIFIER_CONSUMER_GOODS_FACTOR:1 "Consumer Goods Factories factor"
  consumer_goods_factor_tt: " $MODIFIER_CONSUMER_GOODS_FACTOR$: $RIGHT|Y=%1$"
  MODIFIER_CONSUMER_GOODS_EXPECTED_VALUE: "Expected number of factories put on Consumer Goods"
  MODIFIER_AIR_ATTACK:0 "Air Attack"
@@ -609,6 +612,7 @@
  naval_coordination_tt: " $MODIFIER_NAVAL_COORDINATION$: $RIGHT|+=%1$"
  MODIFIER_PLANNING_SPEED:0 "Planning Speed"
  MODIFIER_PLANNING_SPEED_DESC:0 "Increases the rate at which a division's planning bonus is accumulated."
+ planning_speed_factor_tt: "$MODIFIER_PLANNING_SPEED$: $RIGHT|+=%1$"
  MODIFIER_MAX_PLANNING:0 "Max planning"
  MODIFIER_MAX_PLANNING_FACTOR:0 "Max planning factor"
  MODIFIER_MAX_PLANNING_DESC:0 "The biggest our planning advantage can get no matter how long we prepare."
@@ -831,10 +835,12 @@
  MODIFIER_ACCLIMATIZATION_COLD_CLIMATE_GAIN_FACTOR:0 "Cold acclimatization gain factor"
  acclimatization_cold_climate_gain_factor_tt: " $MODIFIER_ACCLIMATIZATION_COLD_CLIMATE_GAIN_FACTOR$: $RIGHT|+=%1$"
  MODIFIER_ACCLIMATIZATION_HOT_CLIMATE_GAIN_FACTOR:0 "Hot acclimatization gain factor"
+ acclimatization_hot_climate_gain_factor_tt: " $MODIFIER_ACCLIMATIZATION_HOT_CLIMATE_GAIN_FACTOR$: $RIGHT|+=%1$"
  mobilization_laws_cost_factor:0 "Conscription Laws Cost"
  trade_laws_cost_factor:0 "Trade Laws Cost"
  economy_cost_factor:1 "Economy Laws Cost"
  political_advisor_cost_factor:0 "Political Advisor Cost"
+ political_advisor_cost_factor_tt: "$political_advisor_cost_factor$: $RIGHT|-=%1$"
  tank_manufacturer_cost_factor:1 "Tank Designer Cost"
  tank_manufacturer_cost_factor_MIO: "Tank §YMilitary Industrial Organization§! cost"
  naval_manufacturer_cost_factor:1 "Naval Designer Cost"
@@ -861,8 +867,8 @@
  MODIFIER_STABILITY_FACTOR:0 "Stability"
  stability_factor_neutral_tt: " $MODIFIER_STABILITY_FACTOR$ $RIGHT|Y=%1$"
  stability_factor_negative_tt: " $MODIFIER_STABILITY_FACTOR$ $RIGHT|R=%1$"
- stability_factor_tt: "$MODIFIER_STABILITY_FACTOR$ $RIGHT|+=%1$"
- stability_factor_whitespace_tt: "  $stability_factor_tt$"
+ stability_factor_tt: " $MODIFIER_STABILITY_FACTOR$ $RIGHT|+=%1$"
+ stability_factor_whitespace_tt: " $stability_factor_tt$"
  MODIFIER_STABILITY_WEEKLY:0 "Weekly Stability"
  MODIFIER_STABILITY_WEEKLY_FACTOR:0 "Weekly Stability Gain"
  MODIFIER_STABILITY_POPULARITY_FACTOR:0 "Party Popularity Stability Modifier"
@@ -876,15 +882,17 @@
  MODIFIER_FORCED_SURRENDER_LIMIT:0 "Surrender Limit"
  MODIFIER_MAX_SURRENDER_LIMIT_OFFSET:0 "Minimum Surrender Limit"
  MODIFIER_WAR_SUPPORT_FACTOR:0 "War Support"
- war_support_factor_neutral_tt: " $MODIFIER_WAR_SUPPORT_FACTOR$ $RIGHT|Y=%1$"
+ war_support_factor_neutral_tt: "$MODIFIER_WAR_SUPPORT_FACTOR$ $RIGHT|Y=%1$"
  war_support_factor_tt: " $MODIFIER_WAR_SUPPORT_FACTOR$ $RIGHT|+=%1$"
- war_support_factor_whitespace_tt: " $war_support_factor_tt$"
+ war_support_factor_whitespace_tt: "$war_support_factor_tt$"
  MODIFIER_WAR_SUPPORT_WEEKLY:0 "Weekly War Support"
  MODIFIER_WAR_SUPPORT_WEEKLY_FACTOR:0 "Weekly War Support Gain"
  MODIFIER_EQUIPMENT_CAPTURE:0 "Equipment Capture Ratio Gain" 
  MODIFIER_EQUIPMENT_CAPTURE_FOR_CONTROLLER: "Equipment Capture Ratio Gain for state controller"
  MODIFIER_COMMAND_POWER_GAIN:0 "Daily Command Power Gain"
- MODIFIER_MAX_COMMAND_POWER:0 "Maximum Command Power Increase"
+ command_power_gain_mult_tt: " $MODIFIER_COMMAND_POWER_GAIN_MULT$ $RIGHT|+=%1$"
+ MODIFIER_MAX_COMMAND_POWER_MULT:0 "Maximum Command Power Increase Multiplier"
+ max_command_power_mult_tt: " $MODIFIER_MAX_COMMAND_POWER_MULT$ $RIGHT|+=%1$"
  max_command_power_tt: " $MODIFIER_MAX_COMMAND_POWER$ $RIGHT|+=0$"
  MODIFIER_COMMAND_POWER_GAIN_MULT:0 "Daily Command Power Gain Multiplier"
  MODIFIER_MAX_COMMAND_POWER_MULT:0 "Maximum Command Power Increase Multiplier"
@@ -1163,6 +1171,7 @@
  DECRYPTION_TOTAL_BASE:0 "Total Base Value: $VALUE|+.0$"
  MODIFIER_LEGITIMACY_FACTOR:0 "Legitimacy Gain"
  MODIFIER_COMPLIANCE_GAIN_ADD:0 "Daily Compliance Gain"
+ modifier_compliance_gain_tt: " $MODIFIER_COMPLIANCE_GAIN_ADD$: $RIGHT|+=%.0$"
  MODIFIER_ENEMY_SPY_NETWORK_GROWTH:0 "Enemy Spy Network Growth"
  MODIFIER_ENEMY_SPY_NEGATIVE_STATUS_FACTOR:0 "Enemy Spy Negative Status [wip]"
  MODIFIER_NO_COMPLIANCE_GAIN:0 "No Compliance Gain"
@@ -1934,11 +1943,27 @@
  air_spirit_category_type_cost_factor: "Air Force Command Spirit Cost"
  navy_spirit_category_type_cost_factor: "Navy Command Spirit Cost"
 
+ army_spirit_category_type_cost_factor_tt: "$army_spirit_category_type_cost_factor$: $RIGHT|-=%1$"
+ air_spirit_category_type_cost_factor_tt: "$air_spirit_category_type_cost_factor$: $RIGHT|-=%1$"
+ navy_spirit_category_type_cost_factor_tt: "$navy_spirit_category_type_cost_factor$: $RIGHT|-=%1$"
+ 
  resistance_damage_to_garrison_on_our_occupied_states_tt: " Damage to Enemy Garrisons in our states occupied by the enemy: $RIGHT|+=%1$"
- whitespace_tt: " "
- large_plane_airframe_design_cost_factor: "Large Plane Design Cost"
+ whitespace_tt: " " 
+ large_plane_airframe_design_cost_factor: "Large Plane Design Cost" 
  MODIFIER_SPECIAL_FORCES_CAP_FLAT: "Special Forces Cap"
  special_forces_cap_flat_tt: "$MODIFIER_SPECIAL_FORCES_CAP_FLAT$: $RIGHT|+=%0$"
  MODIFIER_ARMY_SUB_UNIT_CATEGORY_SPECIAL_FORCES_MAX_ORG_FACTOR: "Special Forces Organization"
  special_forces_organization_tt: " $MODIFIER_ARMY_SUB_UNIT_CATEGORY_SPECIAL_FORCES_MAX_ORG_FACTOR$: $RIGHT|+=0%$"
+ special_forces_mountaineers_organization_tt: " $modifier_army_sub_unit_mountaineers_max_org_factor$: $RIGHT|+=0%$"
+ special_forces_marines_organization_tt: " $modifier_army_sub_unit_marines_max_org_factor$: $RIGHT|+=0%$"
  SWE_royal_visit_modifier: "$POL_growing_monarchist_sentiment$"
+
+ navy_capital_ship_defense_factor_tt: "$MODIFIER_NAVY_CAPITAL_SHIP_DEFENCE_FACTOR$: $RIGHT|+=%1$"
+ communism_drift_factor_tt: "$communism_drift$: $RIGHT|+=2$"
+ democratic_drift_factor_tt: "$democratic_drift$: $RIGHT|+=2$"
+ fascism_drift_factor_tt: "$fascism_drift$: $RIGHT|+=2$"
+ neutrality_drift_factor_tt: "$neutrality_drift$: $RIGHT|+=2$"
+ MODIFIER_LOCAL_BUILDING_SLOTS_FACTOR_tt: "$MODIFIER_LOCAL_BUILDING_SLOTS_FACTOR$: $RIGHT|+=%2$"
+ MODIFIER_STATE_RESOURCES_FACTOR_tt: "$MODIFIER_STATE_RESOURCES_FACTOR$: $RIGHT|+=%2$"
+ MODIFIER_STATE_PRODUCTION_SPEED_BUILDINGS_FACTOR_tt: "$MODIFIER_STATE_PRODUCTION_SPEED_BUILDINGS_FACTOR$: $RIGHT|+=%2$"
+ recruitable_population_factor_tt: "$MODIFIER_RECRUITABLE_POPULATION_FACTOR$: $RIGHT|+=%2$"
